25. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- csv import added (Disclib)

24. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- scanning cdrom/dvd if no cdrom path is set fixed (win32)
	- wrong translation fixed (thanks to Thomas Nehrenheim)
	- csv import added (Kat-CeDe)
	- media number/name at comment widget moved below type
	- do automatic linebreak in comment widget if comment has oversized lines (>40 chars)
	- display size units correctly (Kib, Mib, ...)
	- made size units translateable
	- workaround for displaying rubberband again (win32)
	- scanning non cdrom fixed (linux)
	- displaying error message if cd/dvd could not mounted (linux)

22. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- save last dir on open catalog
	- use qt4 filedialogs
	-  use qxmlsimplereader instead of expat for xml import
	- import datetime for media fixed

21. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- detect uncompressed file size added
	- test for enough memory at catalog reading added
	- read file in chunks instead of in one
	- use qxmlsimplereader instead of expat for catalog parsing

20. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- cdrom/dvd volume name at win32 fixed
	- option "detect cdrom/dvd media name after mount" at win32 removed (not nessary)
	- set default value for cdrom device

19. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- pcre replaced by QRegExp
	- version adjusted
	- parsing date fixed (missing old format2 added: "Apr.12 15:43 2001"
	- searching date added (start, end, start+end)
	- option "detect cdrom/dvd media name after mount" added

17. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- option for debug output on console added
	- string converstion on save fixed

16. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- xml encoding detection added
	- save new catalog in UTF8
	- current author in about dialog changed
	- translation update

28. Nov 2010 Christoph Thielecke <crissi99@gmx.de>