@@ -1,5 +1,7 @@
 25. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- csv import added (Disclib)
+	- dont give a error message if same name at rename dialog
+	- dont give a error message if same number at renumber dialog
 
 24. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- scanning cdrom/dvd if no cdrom path is set fixed (win32)
